# wiki

./: .gitignore  AGENTS.md  README.md  pyproject.toml
playbooks/: codex-integration-checklist.md  ingest-checklist.md  lint-checklist.md  notes-to-wiki-checklist.md  obsidian-workbench-checklist.md
raw/assets/: README.md
raw/inbox/: README.md
raw/sources/: README.md
src/llm_wiki/: __init__.py  cli.py  indexing.py  ingest.py  linting.py  querying.py  search.py  status.py
templates/: concept-page.md  entity-page.md  source-page.md  synthesis-page.md
tests/: test_indexing.py  test_lint_ingest.py  test_querying.py  test_status.py
tools/obsidian-agent-workbench/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
wiki/: index.md  log.md  overview.md
wiki/concepts/: agent-evaluation.md  agent-runtime.md  agent-skills.md  ingest-query-lint.md  llm-wiki.md  protocol-machine.md
wiki/entities/: obsidian.md
wiki/sources/: agent-frontier-scouting-2026-04-25.md  agent-skills-claude-code-cluster-2026-04-25.md  codex-llm-wiki-skill-2026-04-26.md  llm-wiki-json-contract-2026-04-25.md  llm-wiki-search-json-contract-2026-04-25.md  notes-agent-interaction-formalism.md  obsidian-agent-workbench-json-copy-2026-04-26.md  obsidian-agent-workbench-skeleton-2026-04-26.md  obsidian-agent-workbench-status-panel-2026-04-26.md  obsidian-graph-view-2026-04-25.md  obsidian-plugin-development-2026-04-25.md  seed-llm-wiki-pattern.md
wiki/synthesis/: agent-runtime-as-transaction-layer.md  ai-agent-frontier-radar-2026-04.md  (+6 more)
(+12 files in other folders)
