[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "Local CLI tools for maintaining an LLM-managed markdown wiki."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Chikee" }]
dependencies = []

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

